--- a/ChallengeTextRecognitionDL-Copy1.ipynb
+++ b/ChallengeTextRecognitionDL-Copy1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -21,6 +21,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import random\n",
+    "import gensim\n",
+    "import pickle\n",
+    "import logging\n",
     "\n",
     "import zipfile\n",
     "import collections\n",
@@ -41,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +66,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,6 +77,138 @@
     "dataf = datapath + trainf\n",
     "train = pd.read_csv(dataf,names=['Cible','Mot1','Mot2','Mot3','Mot4','Mot5','Mot6','Mot7','Mot8','Mot9','Mot10'],dtype=str,delim_whitespace=True)\n",
     "train.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "logging.basicConfig(format='%(levelname)s : %(message)s', level=logging.INFO)  # %(asctime)s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model = gensim.models.Word2Vec(size=200, sg=1, alpha=0.05, window=5, batch_words=1000, min_count=1, workers=2, negative=10, iter=10)\n",
+    "sentences = gensim.models.word2vec.LineSentence(new)\n",
+    "model.build_vocab(sentences)\n",
+    "model.train(sentences)\n",
+    "model.save('../Models/' + new.split('/')[2].split('.')[0] + 'model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model = gensim.models.Word2Vec(size=200, sg=1, alpha=0.05, window=5, batch_words=1000, min_count=1, workers=2, negative=10, iter=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sentences = gensim.models.word2vec.LineSentence('calldesk-intents.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO : collecting all words and their counts\n",
+      "INFO : PROGRESS: at sentence #0, processed 0 words, keeping 0 word types\n",
+      "INFO : collected 342 word types from a corpus of 6687 raw words and 800 sentences\n",
+      "INFO : Loading a fresh vocabulary\n",
+      "INFO : min_count=1 retains 342 unique words (100% of original 342, drops 0)\n",
+      "INFO : min_count=1 leaves 6687 word corpus (100% of original 6687, drops 0)\n",
+      "INFO : deleting the raw counts dictionary of 342 items\n",
+      "INFO : sample=0.001 downsamples 56 most-common words\n",
+      "INFO : downsampling leaves estimated 2586 word corpus (38.7% of prior 6687)\n",
+      "INFO : estimated required memory for 342 words and 200 dimensions: 718200 bytes\n",
+      "INFO : resetting layer weights\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.build_vocab(sentences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO : training model with 2 workers on 342 vocabulary and 200 features, using sg=1 hs=0 sample=0.001 negative=10 window=5\n",
+      "INFO : expecting 800 sentences, matching count from corpus used for vocabulary survey\n",
+      "INFO : worker thread finished; awaiting finish of 1 more threads\n",
+      "INFO : worker thread finished; awaiting finish of 0 more threads\n",
+      "INFO : training on 66870 raw words (25848 effective words) took 0.2s, 156736 effective words/s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "25848"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.train(sentences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO : saving Word2Vec object under ./calldesk-intents-model, separately None\n",
+      "INFO : not storing attribute syn0norm\n",
+      "INFO : not storing attribute cum_table\n",
+      "INFO : saved ./calldesk-intents-model\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save('./' + 'calldesk-intents-model')"
    ]
   },
   {
